--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>iExpenses</title>
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>iExpense</title>
+  </head>
 
-    <body>
-        <div id="app"></div>
-        <script src="/bundle.js"></script>
-    </body>
+  <body>
+    <div id="app"></div>
+    <script src="/bundle.js"></script>
+  </body>
 </html>
