--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>iExpense</title>
+    <link rel="icon" type="image/ico" href="/images/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
   </head>
 
   <body>
